--- a/templates/StepRegistration/addSteps.html
+++ b/templates/StepRegistration/addSteps.html
@@ -2,11 +2,10 @@
 {% block content %}
     <div class="container">
         <br>
-        <h1>Create your forms here!</h1>
+        <h1>Enter your steps here</h1>
         <div class="container">
             <div class="col-8">
                 <form method="POST">
-                    <h5>Enter all your steps in Kms</h5>
                     {% csrf_token %}
                     {{ form.as_p }}
                     {% if messages %}
