--- a/templates/base.html
+++ b/templates/base.html
@@ -18,7 +18,7 @@
 <div class="wrapper">
     <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #785589;">
         <div class="container-fluid">
-            <a class="navbar-brand" href="{% url 'home' %}">DXC Step Up To Cancer Challenge</a>
+            <a class="navbar-brand" href="{% url 'home' %}">DXC vs. Amey Step Up To Cancer Challenge</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
